--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -59,7 +59,7 @@
     "Traffic": "历史流量统计",
     "More": "更多功能",
     "ThemeEditor": "主题编辑器",
-    "thresholds": "报警阈值设置",
+    "thresholds": "告警阈值设置",
     "AlertTemp": "高温报警通知",
     "ClickThrough": "鼠标穿透",
     "AutoHide": "靠边自动隐藏",
